--- a/index.html
+++ b/index.html
@@ -9,9 +9,16 @@
 </head>
 <body>
     <form> 
-        <input type="text"/>
-        <input type="password"/>
-        <button type="Submit" > Submit </button>
+        <div>
+            <input type="text"/>
+        </div>
+        <div>
+            <input type="password"/>
+        </div>
+        <div>
+            <button type="Submit" > Register </button>
+        </div>
+        
     </form>
 </body>
 </html>
