created form and buttons

--- a/index.html
+++ b/index.html
@@ -6,19 +6,69 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="main.css">
     <title>HTML Forms</title>
+    <style>
+        h1{
+            color: black;
+        }
+    </style>
 </head>
 <body>
-    <form> 
-        <div>
-            <input type="text"/>
-        </div>
-        <div>
-            <input type="password"/>
-        </div>
-        <div>
-            <button type="Submit" > Register </button>
+
+    <nav style= "text-align: right;">
+        <a href=""> <button>About Us</button></a>
+        <a href=""> <button>Register</button></a>
+    </nav>
+    <div class="positioning">
+        <div class="border-style">
+          <form>
+              <h3>Sign Up</h3>
+              <div>
+                  <label for="Email"></label>
+                  <input type="email"placeholder="Email">
+                </div>
+                <div>
+                <label for="Username"></label>
+                <input type="Username"placeholder="Username">
+                </div>
+                <div>
+                <label for="Password"></label>
+                <input type="Password"placeholder="Password">
+                </div>
+                <div>
+                <label for="Confirm Password"></label>
+                <input type="Confirm Password"placeholder="Confirm Password">
+                </div>
+                <div>
+                    <div class="submit-button">
+                    <button type="submit">Submit</button>
+                </div>
+
+
+
+
+        <div>    
+        <a href="https://www.amazon.com/">
+            <img src="C:\Users\Owner\Desktop\HTMLCSS lecture\assets\amazon icon.png"
+             alt="Amazon" width="50" height="50"></a>
+
+        <a href="https://github.com/">
+            <img src="C:\Users\Owner\Desktop\HTMLCSS lecture\assets\github icon.png"
+             alt="Amazon" width="50" height="50"></a>
+
+        <a href="https://www.instagram.com/?hl=en">
+            <img src="C:\Users\Owner\Desktop\HTMLCSS lecture\assets\instagram icon.jpg"
+            alt="Amazon" width="50" height="50"></a>
+
+        <a href="https://www.linkedin.com/">
+            <img src="C:\Users\Owner\Desktop\HTMLCSS lecture\assets\linkedin-logo.html"
+            alt="Amazon" width="50" height="50"></a>
+
+        <a href="https://www.facebook.com/">
+            <img src="C:\Users\Owner\Desktop\HTMLCSS lecture\assets\round-shadow-facebook-icon.jpg"
+            alt="Amazon" width="50" height="50"></a>
         </div>
         
     </form>
+
 </body>
 </html>
